[stone]add .gitignore

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,7 @@ html
   head
     title=title
     meta(name='viewport', content='width=device-width, initial-scale=1, maxmun-scale=1, user-scalable=no')
-    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     .container
