--- a/views/lists.pug
+++ b/views/lists.pug
@@ -7,7 +7,7 @@ block content
 			.panel-body
 				form(class='form-inline', action='//localhost:3000/goods/search')
 					.form-group
-						input(name='name', class='form-control', placeholder='按名称查询')
+						input(name='name', class='form-control', placeholder='按名称查询', value=searchValue)
 					= '\t'
 					button(type='submit', class='btn btn-default') 点击查询
 		table(class='table table-hover')
@@ -28,3 +28,6 @@ block content
 							a(href='//localhost:3000/goods/update?id='+_tr._id, class='btn btn-sm btn-info') 修改
 							= '\t'
 							a(href='//localhost:3000/goods/delete?name='+_tr.name, class='btn btn-sm btn-danger') 删除
+				else
+					tr
+						td(colspan=6, class='text-center') 没有内容!
